syntax = "proto3";
package threads.pb;

option java_multiple_files = true;
option java_package = "io.textile.threads_grpc";
option java_outer_classname = "Threads";
option objc_class_prefix = "THREADS";

message GetTokenRequest {
    oneof payload {
        string key = 1;
        bytes signature = 2;
    }
}

message GetTokenReply {
    oneof payload {
        bytes challenge = 1;
        string token = 2;
    }
}

message NewDBRequest {
    bytes dbID = 1;
    repeated CollectionConfig collections = 2;
    string name = 3;
}

message NewDBFromAddrRequest {
    bytes addr = 1;
    bytes key = 2;
    repeated CollectionConfig collections = 3;
    string name = 4;
    bool block = 5;
}

message CollectionConfig {
    string name = 1;
    bytes schema = 2;
    repeated Index indexes = 3;
    string writeValidator = 4;
    string readFilter = 5;
}

message Index {
    string path = 1;
    bool unique = 2;
}

message NewDBReply {}

message ListDBsRequest {}

message ListDBsReply {
    repeated DB dbs = 1;

    message DB {
        bytes dbID = 1;
        GetDBInfoReply info = 2;
    }
}

message GetDBInfoRequest {
    bytes dbID = 1;
}

message GetDBInfoReply {
    repeated bytes addrs = 1;
    bytes key = 2;
    string name = 3;
}

message DeleteDBRequest {
    bytes dbID = 1;
}

message DeleteDBReply {}

message NewCollectionRequest {
    bytes dbID = 1;
    CollectionConfig config = 2;
}

message NewCollectionReply {}

message UpdateCollectionRequest {
    bytes dbID = 1;
    CollectionConfig config = 2;
}

message UpdateCollectionReply {}

message DeleteCollectionRequest {
    bytes dbID = 1;
    string name = 2;
}

message DeleteCollectionReply {}

message GetCollectionInfoRequest {
    bytes dbID = 1;
    string name = 2;
}

message GetCollectionInfoReply {
    string name = 1;
    bytes schema = 2;
    repeated Index indexes = 3;
    string writeValidator = 4;
    string readFilter = 5;
}

message GetCollectionIndexesRequest {
    bytes dbID = 1;
    string name = 2;
}

message GetCollectionIndexesReply {
    repeated Index indexes = 1;
}

message ListCollectionsRequest {
    bytes dbID = 1;
}

message ListCollectionsReply {
    repeated GetCollectionInfoReply collections = 1;
}

message CreateRequest {
    bytes dbID = 1;
    string collectionName = 2;
    repeated bytes instances = 3;
}

message CreateReply {
    repeated string instanceIDs = 1;
}

message VerifyRequest {
    bytes dbID = 1;
    string collectionName = 2;
    repeated bytes instances = 3;
}

message VerifyReply {}

message SaveRequest {
    bytes dbID = 1;
    string collectionName = 2;
    repeated bytes instances = 3;
}

message SaveReply {}

message DeleteRequest {
    bytes dbID = 1;
    string collectionName = 2;
    repeated string instanceIDs = 3;
}

message DeleteReply {}

message HasRequest {
    bytes dbID = 1;
    string collectionName = 2;
    repeated string instanceIDs = 3;
}

message HasReply {
    bool exists = 1;
}

message FindRequest {
    bytes dbID = 1;
    string collectionName = 2;
    bytes queryJSON = 3;
}

message FindReply {
    repeated bytes instances = 1;
}

message FindByIDRequest {
    bytes dbID = 1;
    string collectionName = 2;
    string instanceID = 3;
}

message FindByIDReply {
    bytes instance = 1;
}

message DiscardRequest {}

message DiscardReply {}

message StartTransactionRequest {
    bytes dbID = 1;
    string collectionName = 2;
}

message ReadTransactionRequest {
    oneof option {
        StartTransactionRequest startTransactionRequest = 1;
        HasRequest hasRequest = 2;
        FindRequest findRequest = 3;
        FindByIDRequest findByIDRequest = 4;
    }
}

message ReadTransactionReply {
    oneof option {
        HasReply hasReply = 1;
        FindReply findReply = 2;
        FindByIDReply findByIDReply = 3;
    }
}

message WriteTransactionRequest {
    oneof option {
        StartTransactionRequest startTransactionRequest = 1;
        CreateRequest createRequest = 2;
        VerifyRequest verifyRequest = 8;
        SaveRequest saveRequest = 3;
        DeleteRequest deleteRequest = 4;
        HasRequest hasRequest = 5;
        FindRequest findRequest = 6;
        FindByIDRequest findByIDRequest = 7;
        DiscardRequest discardRequest = 9;
    }
}

message WriteTransactionReply {
    oneof option {
        CreateReply createReply = 1;
        VerifyReply verifyReply = 7;
        SaveReply saveReply = 2;
        DeleteReply deleteReply = 3;
        HasReply hasReply = 4;
        FindReply findReply = 5;
        FindByIDReply findByIDReply = 6;
        DiscardReply discardReply = 8;
    }
}

message ListenRequest {
    bytes dbID = 1;
    repeated Filter filters = 2;

    message Filter {
        string collectionName = 1;
        string instanceID = 2;
        enum Action {
            ALL = 0;
            CREATE = 1;
            SAVE = 2;
            DELETE = 3;
        }
        Action action = 3;
    }
}

message ListenReply {
    string collectionName = 1;
    string instanceID = 2;
    Action action = 3;
    bytes instance = 4;

    enum Action {
        CREATE = 0;
        SAVE = 1;
        DELETE = 2;
    }
}

service API {
    rpc GetToken(stream GetTokenRequest) returns (stream GetTokenReply) {}
    rpc NewDB(NewDBRequest) returns (NewDBReply) {}
    rpc NewDBFromAddr(NewDBFromAddrRequest) returns (NewDBReply) {}
    rpc ListDBs(ListDBsRequest) returns (ListDBsReply) {}
    rpc GetDBInfo(GetDBInfoRequest) returns (GetDBInfoReply) {}
    rpc DeleteDB(DeleteDBRequest) returns (DeleteDBReply) {}
    rpc NewCollection(NewCollectionRequest) returns (NewCollectionReply) {}
    rpc UpdateCollection(UpdateCollectionRequest) returns (UpdateCollectionReply) {}
    rpc DeleteCollection(DeleteCollectionRequest) returns (DeleteCollectionReply) {}
    rpc GetCollectionInfo(GetCollectionInfoRequest) returns (GetCollectionInfoReply) {}
    rpc GetCollectionIndexes(GetCollectionIndexesRequest) returns (GetCollectionIndexesReply) {
        option deprecated = true;
    }
    rpc ListCollections(ListCollectionsRequest) returns (ListCollectionsReply) {}
    rpc Create(CreateRequest) returns (CreateReply) {}
    rpc Verify(VerifyRequest) returns (VerifyReply) {}
    rpc Save(SaveRequest) returns (SaveReply) {}
    rpc Delete(DeleteRequest) returns (DeleteReply) {}
    rpc Has(HasRequest) returns (HasReply) {}
    rpc Find(FindRequest) returns (FindReply) {}
    rpc FindByID(FindByIDRequest) returns (FindByIDReply) {}
    rpc ReadTransaction(stream ReadTransactionRequest) returns (stream ReadTransactionReply) {}
    rpc WriteTransaction(stream WriteTransactionRequest) returns (stream WriteTransactionReply) {}
    rpc Listen(ListenRequest) returns (stream ListenReply) {}
}
