syntax = "proto3";
package net.api.pb;

option java_multiple_files = true;
option java_package = "io.textile.threads_net_grpc";
option java_outer_classname = "ThreadsNet";
option objc_class_prefix = "THREADSNET";

message Credentials {
    bytes threadID = 1;
    bytes pubKey = 2;
    bytes signature = 3;
}

message GetHostIDRequest {}

message GetHostIDReply {
    bytes peerID = 1;
}

message Keys {
    bytes threadKey = 1;
    bytes logKey = 2;
}

message CreateThreadRequest {
    Credentials credentials = 1;
    Keys keys = 2;
}

message LogInfo {
    bytes ID = 1;
    bytes pubKey = 2;
	bytes privKey = 3;
	repeated bytes addrs = 4;
	bytes head = 5;
}

message ThreadInfoReply {
    bytes threadID = 1;
    bytes threadKey = 2;
    repeated LogInfo logs = 3;
}

message AddThreadRequest {
    Credentials credentials = 1;
    bytes addr = 2;
    Keys keys = 3;
}

message GetThreadRequest {
    Credentials credentials = 1;
}

message PullThreadRequest {
    Credentials credentials = 1;
}

message PullThreadReply {}

message DeleteThreadRequest {
    Credentials credentials = 1;
}

message DeleteThreadReply {}

message AddReplicatorRequest {
    Credentials credentials = 1;
    bytes addr = 2;
}

message AddReplicatorReply {
    bytes peerID = 1;
}

message CreateRecordRequest {
    Credentials credentials = 1;
    bytes body = 2;
}

message Record {
    bytes recordNode = 1;
    bytes eventNode = 2;
    bytes headerNode = 3;
    bytes bodyNode = 4;
}

message NewRecordReply {
    bytes threadID = 1;
    bytes logID = 2;
    Record record = 3;
}

message AddRecordRequest {
    Credentials credentials = 1;
    bytes logID = 2;
    Record record = 3;
}

message AddRecordReply {}

message GetRecordRequest {
    Credentials credentials = 1;
    bytes recordID = 2;
}

message GetRecordReply {
    Record record = 1;
}

message SubscribeRequest {
    repeated Credentials credentials = 1;
}

service API {
    rpc GetHostID(GetHostIDRequest) returns (GetHostIDReply) {}
    rpc CreateThread(CreateThreadRequest) returns (ThreadInfoReply) {}
    rpc AddThread(AddThreadRequest) returns (ThreadInfoReply) {}
    rpc GetThread(GetThreadRequest) returns (ThreadInfoReply) {}
    rpc PullThread(PullThreadRequest) returns (PullThreadReply) {}
    rpc DeleteThread(DeleteThreadRequest) returns (DeleteThreadReply) {}
    rpc AddReplicator(AddReplicatorRequest) returns (AddReplicatorReply) {}
    rpc CreateRecord(CreateRecordRequest) returns (NewRecordReply) {}
    rpc AddRecord(AddRecordRequest) returns (AddRecordReply) {}
    rpc GetRecord(GetRecordRequest) returns (GetRecordReply) {}
    rpc Subscribe(SubscribeRequest) returns (stream NewRecordReply) {}
}
